Do not return collectionFolders() unless ready.

If a collectionFolders() method of MountPointManager is called before it
has completed identifying mount points, it adds the default path like
$HOME/Music.

BUG: 286219